<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/switch_language"
          android:title="@string/switch_language"
          android:orderInCategory="100"
          android:showAsAction="always"
          app:showAsAction="always"
          android:onClick="switch_language" />
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        app:showAsAction="never" />
    <item android:id="@+id/action_import"
        android:title="@string/import_timetable"
        android:orderInCategory="100"
        android:showAsAction="never"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
          android:title="@string/about"
          android:orderInCategory="100"
          android:showAsAction="never"
          app:showAsAction="never" />
</menu>
